--- a/config.ini
+++ b/config.ini
@@ -2,38 +2,48 @@
 # This is a configuration file for docker container ksey/shapeshifter-dispatcher
 # Put this to "/state" directory of the container, uncomment the desired options and restart container.
 
-# server
-# client
+# Update OS at every boot.
+# Default: "true"
+OS_UPDATE=true
+
+# Use either client or server to place the proxy into client or server mode, respectively.
+# Possible options: server, client
+# Default: server
 MODE=server
 
-# transparent-TCP
-# transparent-UDP
-# STUN
+# TCP proxy mode
+# Possible options: transparent-TCP, transparent-UDP, STUN
+# Default: transparent-TCP
 PROXY_MODE=transparent-TCP
 
-# obfs2
-# obfs4
-# shadow
-TRANSPORT=obfs4
+# Each transport implements a different method of shapeshifting network traffic.
+# The goal is for application traffic to be sent over the network in a shapeshifted form that bypasses network filtering, 
+# allowing the application to work on networks where it would otherwise be blocked or heavily throttled.
+# Possible options:
+# obfs2 - an older transport which provides basic encryption. It is not recommended that you use obfs2, but it the simplest transport to configure with shapeshifter.
+# obfs4 - this is a slightly more complicated setup, but allows for better obfuscation of your traffic.
+# shadow - (shadowsocks) - is a simple, but effective and popular network traffic obfuscation tool that uses basic encryption with a shared password.
+# Default: obfs2
+TRANSPORT=obfs2
 
-# obfs4_client.json
-# shadow_client.json
-# shadow_server.json
+# Transport configuration file.
+# obfs4_client.json - it is necessary to place on the client side and change the cert string to string from file _OBFS4_CLIENT_CERT.txt
+# shadow_client.json - it is necessary to place on the client side and change the password string to the same as on the server side 
+# shadow_server.json - it is necessary to place on the server side and change the password string to the same as on the client side
+# Default: empty
 OPTIONS_FILE=
 
-# For proxy SERVER
+# Configuration for SERVER side
 LISTEN_IP=0.0.0.0
-LISTEN_PORT=5443
+LISTEN_PORT=443
 # Forward from local proxy server to local OpenVPN server (for example)
-FORWARD_IP=192.168.1.254
-FORWARD_PORT=5001
+FORWARD_IP=127.0.0.1
+FORWARD_PORT=1194
 
-# For proxy CLIENT
+# Configuration for CLIENT side
+# Сomment out configuration for SERVER side and uncomment configuration for CLIENT side
 # LISTEN_IP=0.0.0.0
 # LISTEN_PORT=8443
 # Forward from proxy client to remote proxy server
-# FORWARD_IP=192.168.1.254
-# FORWARD_PORT=5443
-
-# Update OS at every boot. Default: "true"
-OS_UPDATE=true
+# FORWARD_IP=[_SERVER_PUBLIC_LISTEN_IP]
+# FORWARD_PORT=443
