--- a/config.ini
+++ b/config.ini
@@ -21,7 +21,7 @@ PROXY_MODE=transparent-TCP
 # allowing the application to work on networks where it would otherwise be blocked or heavily throttled.
 # Possible options:
 # obfs2 - an older transport which provides basic encryption. It is not recommended that you use obfs2, but it the simplest transport to configure with shapeshifter.
-# obfs4 - this is a slightly more complicated setup, but allows for better obfuscation of your traffic.
+# obfs4 - (recommended) this is a slightly more complicated setup, but allows for better obfuscation of your traffic.
 # shadow - (shadowsocks) - is a simple, but effective and popular network traffic obfuscation tool that uses basic encryption with a shared password.
 # Default: obfs2
 TRANSPORT=obfs2
@@ -41,7 +41,7 @@ FORWARD_IP=127.0.0.1
 FORWARD_PORT=1194
 
 # Configuration for CLIENT side
-# Сomment out configuration for SERVER side and uncomment configuration for CLIENT side
+# Befor use comment out configuration for SERVER side and uncomment configuration for CLIENT side
 # LISTEN_IP=0.0.0.0
 # LISTEN_PORT=8443
 # Forward from proxy client to remote proxy server
